--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,15 @@
 spring.application.name=ecommerce
-spring.datasource.url=jdbc:h2:file:./data/ecommerce
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
 
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-H2spring.datasource.url=jdbc:h2:file:./data/ecommerce
-spring.driverClassName=org.h2.Driver.username=admin.datasource.password=admin
-H2 Consolespring.h2console.enabled = truespring.h2.console.path=/h2-console
-hibernatespring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-# Hibernate
-spring.jpa.properties.hibernate.current_session_context_class=thread
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
+
+#Port
+server.port=5000
+#DB
+spring.datasource.url=jdbc:mysql://localhost:3360/musicResearch?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
